# azure-container-apps-sandboxes

./: .gitattributes  .gitignore  README.md  marketplace.json
.devcontainer/: devcontainer.json
cli/: README.md
labs/: README.md
labs/01-sandbox-getting-started/: 01-getting-started.ipynb  02-deploy-web-app.ipynb  03-copilot-cli.ipynb  README.md
labs/02-durable-task-workflows/: 01-orchestrate-sandbox-jobs.ipynb  README.md  main.py
labs/02-openai-agents-sandbox/: README.md  (+5 more)
plugin/: README.md
python/: README.md
python/samples/08-sandbox-agents/openai/sandbox-agent-extension/: README.md  pyproject.toml
python/samples/08-sandbox-agents/openai/sandbox-agent-extension/src/agents_aca_sandboxes/: _config.py  _exceptions.py  _paths.py  models.py
python/samples/08-sandbox-agents/openai/sandbox-agent-extension/tests/: test_e2e_agent.py  test_imports.py  test_live_lifecycle.py
samples/agent-swarms/: .dockerignore  .gitignore  Dockerfile  README.md  azure.yaml  pyproject.toml
samples/agent-swarms/docs/: architecture.md  quickstart.md  troubleshooting.md
samples/agent-swarms/hooks/: preprovision.ps1
samples/agent-swarms/infra/: main.bicep  main.json  main.parameters.json
samples/agent-swarms/sandbox-image/: Dockerfile  README.md  run-role.py
samples/agent-swarms/src/agent_swarm_service/: __init__.py  app.py  config.py  dependencies.py
samples/agent-swarms/src/agent_swarm_service/api/: schemas.py  sse.py
samples/agent-swarms/src/agent_swarm_service/api/routers/: health.py  swarm_runs.py
samples/agent-swarms/src/agent_swarm_service/auth/: __init__.py  session_store.py
samples/agent-swarms/src/agent_swarm_service/github/: __init__.py  publishing.py
samples/agent-swarms/src/agent_swarm_service/orchestration/: __init__.py  coordinator.py  copilot_runtime.py  dts.py  models.py  projections.py  sandbox_execution.py
samples/agent-swarms/src/agent_swarm_service/runtime/: __init__.py  storage.py
samples/agent-swarms/src/agent_swarm_service/sandboxes/: __init__.py  aca_client.py  logs.py  sandbox_groups.py  workspace.py
samples/agent-swarms/src/agent_swarm_service/services/: swarm_runs.py
samples/agent-swarms/tests/: contract_support.py  test_dts_runtime.py  test_durable_runtime.py  test_external_sample_layout.py  test_public_http_contract.py  test_request_validation_contract.py  test_sandbox_adapter_contract.py  test_sandbox_runtime_contract.py
scripts/: release.sh
(+258 files in other folders)
