[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agents-extension-aca-sandboxes"
version = "0.1.0"
description = "ACA Sandboxes provider for the OpenAI Agents SDK — run SandboxAgent on Azure Container Apps Sandboxes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ai-apps samples" }]
keywords = ["openai", "agents", "sandbox", "azure", "container-apps", "aca"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai-agents >= 0.17.0",
    "azure-identity >= 1.15",
    "pydantic >= 2.0",
    "azure-containerapps-sandbox == 0.1.0b1",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "pytest-asyncio >= 0.21",
]

[project.urls]
"Source" = "https://github.com/annaji-msft/ai-apps"

[tool.hatch.build.targets.wheel]
packages = ["src/agents_aca_sandboxes"]

[tool.hatch.metadata]
# Allow direct-URL wheel reference for the early-access azure-containerapps-sandbox SDK
# when the published 0.1.0b1 wheel on PyPI is not the version you want.
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
